fixed table alignment and links

--- a/style.css
+++ b/style.css
@@ -12,4 +12,9 @@ strong	{
 		font-weight: bold;
 		text-transform: uppercase;
 		text-decoration: underline;
-	}		
+	}
+
+table.center	{
+			margin-left:auto;
+			margin-right:auto;
+		}		
